Refactor handler logic out of `main.go`
Refactored `cmd/api/main.go` import statement to one line. Refactored
`cmd/ui/Dockerfile` to a multi-stage build and using the `scratch` image.
All handler logic has been refactored out of `main.go` and into
`handlers.go`.

--- a/cmd/ui/Dockerfile
+++ b/cmd/ui/Dockerfile
@@ -1,7 +1,13 @@
-FROM golang:1.17
+FROM golang:1.17 as build
 WORKDIR /go/src/github.com/oglinuk/restful-go/ui
 COPY . .
 RUN go mod download && go mod verify
+ENV CGO_ENABLED=0
 RUN go build -ldflags="-w -s"
+
+FROM scratch
+COPY --from=build /go/src/github.com/oglinuk/restful-go/ui/static /static
+COPY --from=build /go/src/github.com/oglinuk/restful-go/ui/templates /templates
+COPY --from=build /go/src/github.com/oglinuk/restful-go/ui/ui ui
 EXPOSE 9042
-ENTRYPOINT ["./ui"]
+ENTRYPOINT ["/ui"]
