Refactor `cmd/ui`
Add dynamic setting of `currentIP` by using environment variables and
making a request to `dockerIP` first and if it fails using `localhost`.
Added `alert` to `catch` statment of fetch call in `index.js` to notify
user if delete fails. Added local `favicon.svg` file and reference it in
`header.html`. Updated tests and added `TestDecodeJSON` to
`cmd/ui/utils_test.go`. Added more entries in `books.csv`. Updated
`docker-compose.yml` service name and container_name `rest-api`. Updated
code-review document.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,11 +6,11 @@ services:
     ports:
       - 9042:9042
     depends_on:
-      - api
+      - rest-api
     networks:
       - tiered
-  api:
-    container_name: api
+  rest-api:
+    container_name: rest-api
     build: .
     ports:
       - 9001:9001
